@@ -1,3 +1,9 @@
+Wed Jul 21 15:54:27 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tao/TAO_Internal.cpp:
+        
+          reverted for_TAO specific call to service gestalt open.
+
 Wed Jul 21 15:43:39 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
 
         * tests/Sequence_Unit_Tests/value_sequence_tester.hpp:
